# llvm-uplc

./: .gitignore  CMakeLists.txt  PLAN.md  README.md
cmake/: FindGMP.cmake  UplcCompileOptions.cmake
compiler/: CMakeLists.txt  driver.cc  driver.h  lowering.cc  lowering.h  main.cc
compiler/analysis/: compile_plan.cc  compile_plan.h
compiler/ast/: arena.cc  arena.h  builtin_table.cc  builtin_tag.h  cbor_data.cc  cbor_data.h  pretty.cc  pretty.h  term.cc  term.h
compiler/codegen/: baked_const.cc  baked_const.h  llvm_codegen.cc  llvm_codegen.h
compiler/frontend/: cbor_unwrap.cc  cbor_unwrap.h  flat.cc  flat.h  lexer.cc  lexer.h  name_to_debruijn.cc  name_to_debruijn.h  parser.cc  parser.h  validate.cc  validate.h
compiler/jit/: codegen_pipeline.cc  codegen_pipeline.h  jit_runner.cc  jit_runner.h  runtime_bitcode.cc  runtime_bitcode.h
compiler_bc/: CMakeLists.txt  disasm.cc  disasm.h  lower_to_bc.cc  lower_to_bc.h  main.cc
docs/: bytecode.md
driver/: CMakeLists.txt  main.cc
include/: CMakeLists.txt
include/uplc/: abi.h  budget.h  build_paths.h.in  bytecode.h  costmodel.h  term.h  version.h
runtime/: CMakeLists.txt  arena.c  arena.h  budget.c  builtin_dispatch.c  builtin_dispatch.h  builtin_state.c  builtin_state.h  builtin_table.c  case_decompose.c  case_decompose.h  cbor_data.c  cbor_data.h  errors.c  exmem.c  exmem.h  readback.c  readback.h  value.c  value.h
runtime/builtins/: arith.c  array.c  bitwise.c  bls12_381.c  bytestring.c  control.c  crypto.c  data.c  expmod.c  helpers.c  helpers.h  intbs.c  list.c  pair.c  secp256k1.c  string.c  value.c
runtime/bytecode/: closure.c  closure.h  dispatch.h  frames.h  ops_abstraction.c  ops_apply.c  ops_case.c  ops_constr.c  ops_control.c  ops_force.c  vm.c
runtime/cek/: cek.c  cek.h  closure.c  closure.h  env.c  env.h  readback.c  readback.h  rterm.c  rterm.h  stack.c  stack.h
runtime/compiled/: apply.c  baked_const.c  baked_const.h  builtin.c  case.c  closure.c  closure.h  constr.c  consts.c  entry.c  entry.h  force.c
runtime/core/: arena.c  arena.h  budget.c  builtin_dispatch.c  builtin_state.c  builtin_state.h  builtin_table.c  case_decompose.c  case_decompose.h  cbor_data.c  cbor_data.h  costmodel.c  errors.c  errors.h  exmem.c  rterm.c  rterm.h  value.c  value.h  version.c
runtime/runner/: CMakeLists.txt  main.cc
tests/: CMakeLists.txt
tests/conformance/: bc_conformance_test.cc  eval_conformance_test.cc  jit_conformance_test.cc  round_trip_test.cc
tests/unit/: bc_disasm_test.cc  bc_lower_test.cc  bc_vm_test.cc  builtin_test.cc  cek_test.cc  codegen_test.cc  compile_plan_test.cc  compiled_abi_test.cc  frontend_test.cc
tools/bench/: CMakeLists.txt  README.md  main.cc
